--- a/util/package.json
+++ b/util/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ajv": "^6.12.6",
     "csv-parse": "^4.15.3",
+    "jsonpath": "^1.1.1",
     "uuid": "^3.3.3",
     "uuid4": "^1.1.4",
     "xlsx": "^0.18.5"
