--- a/etc/nls/all-ref/08-configuration/configurations__entries.json
+++ b/etc/nls/all-ref/08-configuration/configurations__entries.json
@@ -53,6 +53,18 @@
       }
     },
     {
+      "id": "21034824-1cec-41cd-a6cd-c1acce87e217",
+      "module": "OAIPMH",
+      "configName": "general",
+      "enabled": true,
+      "value": "{\"administratorEmail\":\"goran.lundberg@kb.se\",\"repositoryName\":\"folio_dev_02_oai_repository\",\"enableOaiService\":\"true\",\"timeGranularity\":\"YYYY-MM-DDThh:mm:ssZ\",\"baseUrl\":\"https://folio-dev-02.kb.se/oai\"}",
+      "metadata": {
+        "createdDate": "2023-03-13T12:11:40.074+00:00",
+        "updatedDate": "2025-10-03T06:55:03.982+00:00",
+        "updatedByUserId": "ccd9c2a1-5455-4512-bf54-956fe923a8ab"
+      }
+    },
+    {
       "id": "4569f3c8-0828-484d-843d-e9f2786a0b27",
       "module": "ORDERS",
       "configName": "inventory-instanceTypeCode",
@@ -63,6 +75,19 @@
         "createdByUserId": "f1f8c668-17eb-49c3-b10d-9a3cd8bb0ef6",
         "updatedDate": "2025-06-16T07:47:47.385+00:00",
         "updatedByUserId": "f1f8c668-17eb-49c3-b10d-9a3cd8bb0ef6"
+      }
+    },
+    {
+      "id": "601db640-2cdb-4744-a7b6-1fc43b5c1eb6",
+      "module": "ORDERS",
+      "configName": "poLines-limit",
+      "enabled": true,
+      "value": "20",
+      "metadata": {
+        "createdDate": "2025-10-22T09:26:58.064+00:00",
+        "createdByUserId": "050932c6-05cf-46c7-8207-dd8f8e99f36d",
+        "updatedDate": "2025-10-22T09:27:05.386+00:00",
+        "updatedByUserId": "050932c6-05cf-46c7-8207-dd8f8e99f36d"
       }
     },
     {
@@ -79,15 +104,42 @@
       }
     },
     {
-      "id": "21034824-1cec-41cd-a6cd-c1acce87e217",
-      "module": "OAIPMH",
-      "configName": "general",
+      "id": "162f218e-e86a-4a41-b1b0-972895c12b1c",
+      "module": "LOAN_HISTORY",
+      "configName": "loan_history",
       "enabled": true,
-      "value": "{\"administratorEmail\":\"goran.lundberg@kb.se\",\"repositoryName\":\"folio_test_03_oai_repository\",\"enableOaiService\":\"true\",\"timeGranularity\":\"YYYY-MM-DDThh:mm:ssZ\",\"baseUrl\":\"http://folio-test-03.kb.local:9701/oai\"}",
+      "value": "{\"closingType\":{\"loan\":\"interval\",\"feeFine\":null,\"loanExceptions\":[]},\"loan\":{\"duration\":6,\"intervalId\":\"Months\"},\"feeFine\":{},\"loanExceptions\":[],\"treatEnabled\":false}",
       "metadata": {
-        "createdDate": "2023-03-13T12:11:40.074+00:00",
-        "updatedDate": "2023-12-07T13:55:23.527+00:00",
-        "updatedByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c"
+        "createdDate": "2023-11-16T13:41:21.891+00:00",
+        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
+        "updatedDate": "2025-09-19T11:04:38.938+00:00",
+        "updatedByUserId": "3c7da0e3-9298-4286-b037-6b0035237d08"
+      }
+    },
+    {
+      "id": "363f3e6a-1c54-45b9-9924-7fe0057fef60",
+      "module": "ORDERS",
+      "configName": "openOrder",
+      "enabled": true,
+      "value": "{\"isOpenOrderEnabled\":true,\"isDuplicateCheckDisabled\":false}",
+      "metadata": {
+        "createdDate": "2023-11-22T10:34:47.171+00:00",
+        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
+        "updatedDate": "2025-11-11T09:12:13.410+00:00",
+        "updatedByUserId": "050932c6-05cf-46c7-8207-dd8f8e99f36d"
+      }
+    },
+    {
+      "id": "90a6e44a-2d9e-4fc3-8955-d84a8c982752",
+      "module": "SETTINGS",
+      "configName": "TLR",
+      "enabled": true,
+      "value": "{\"titleLevelRequestsFeatureEnabled\":false,\"createTitleLevelRequestsByDefault\":false,\"tlrHoldShouldFollowCirculationRules\":false,\"confirmationPatronNoticeTemplateId\":null,\"cancellationPatronNoticeTemplateId\":null,\"expirationPatronNoticeTemplateId\":null}",
+      "metadata": {
+        "createdDate": "2024-03-21T16:07:17.641+00:00",
+        "createdByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246",
+        "updatedDate": "2025-11-12T09:14:00.370+00:00",
+        "updatedByUserId": "050932c6-05cf-46c7-8207-dd8f8e99f36d"
       }
     },
     {
@@ -113,19 +165,6 @@
         "createdDate": "2023-03-13T12:11:40.086+00:00",
         "updatedDate": "2023-11-27T11:43:50.766+00:00",
         "updatedByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c"
-      }
-    },
-    {
-      "id": "90a6e44a-2d9e-4fc3-8955-d84a8c982752",
-      "module": "SETTINGS",
-      "configName": "TLR",
-      "enabled": true,
-      "value": "{\"titleLevelRequestsFeatureEnabled\":false,\"createTitleLevelRequestsByDefault\":false,\"confirmationPatronNoticeTemplateId\":null,\"cancellationPatronNoticeTemplateId\":null,\"expirationPatronNoticeTemplateId\":null}",
-      "metadata": {
-        "createdDate": "2024-03-21T16:07:17.641+00:00",
-        "createdByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246",
-        "updatedDate": "2024-03-21T16:14:19.443+00:00",
-        "updatedByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246"
       }
     },
     {
@@ -180,42 +219,16 @@
       }
     },
     {
-      "id": "162f218e-e86a-4a41-b1b0-972895c12b1c",
-      "module": "LOAN_HISTORY",
-      "configName": "loan_history",
-      "enabled": true,
-      "value": "{\"closingType\":{\"loan\":\"interval\",\"feeFine\":null,\"loanExceptions\":[]},\"loan\":{\"intervalId\":\"Months\",\"duration\":6},\"feeFine\":{},\"loanExceptions\":[],\"treatEnabled\":false}",
-      "metadata": {
-        "createdDate": "2023-11-16T13:41:21.891+00:00",
-        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
-        "updatedDate": "2025-07-07T13:22:04.182+00:00",
-        "updatedByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246"
-      }
-    },
-    {
-      "id": "363f3e6a-1c54-45b9-9924-7fe0057fef60",
-      "module": "ORDERS",
-      "configName": "openOrder",
-      "enabled": true,
-      "value": "{\"isOpenOrderEnabled\":false,\"isDuplicateCheckDisabled\":false}",
-      "metadata": {
-        "createdDate": "2023-11-22T10:34:47.171+00:00",
-        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
-        "updatedDate": "2025-09-02T20:36:19.349+00:00",
-        "updatedByUserId": "80c34dfc-fed7-40b1-94ea-62bfc3c4f487"
-      }
-    },
-    {
       "id": "1600314b-5cc7-42f6-8cfe-5ca44ffb6827",
       "module": "CHECKOUT",
       "configName": "other_settings",
       "enabled": true,
-      "value": "{\"audioAlertsEnabled\":false,\"audioTheme\":\"classic\",\"checkoutTimeout\":true,\"checkoutTimeoutDuration\":3,\"prefPatronIdentifier\":\"barcode,username,customFields.personnummer\",\"useCustomFieldsAsIdentifiers\":true,\"wildcardLookupEnabled\":true}",
+      "value": "{\"audioAlertsEnabled\":false,\"audioTheme\":\"classic\",\"checkoutTimeout\":true,\"checkoutTimeoutDuration\":3,\"prefPatronIdentifier\":\"barcode,username,customFields.personnummer\",\"useCustomFieldsAsIdentifiers\":true,\"wildcardLookupEnabled\":false}",
       "metadata": {
         "createdDate": "2023-11-02T14:36:49.750+00:00",
         "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
-        "updatedDate": "2025-06-30T08:24:20.395+00:00",
-        "updatedByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246"
+        "updatedDate": "2025-10-21T15:10:15.557+00:00",
+        "updatedByUserId": "b9830a1c-82eb-4c53-9278-e96815826061"
       }
     },
     {
@@ -391,9 +404,9 @@
       }
     }
   ],
-  "totalRecords": 28,
+  "totalRecords": 29,
   "resultInfo": {
-    "totalRecords": 28,
+    "totalRecords": 29,
     "facets": [],
     "diagnostics": []
   }
