--- a/util/package.json
+++ b/util/package.json
@@ -9,6 +9,6 @@
     "jsonpath": "^1.1.1",
     "uuid": "^3.3.3",
     "uuid4": "^1.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   }
 }
